--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,15 @@ before_install:
 # travis ci expects test to end and exit successfully to be considered a pass.
 script:
   - docker run -e CI=true anmoldesai/docker-react yarn run test
+
+deploy:
+  provider: elasticbeanstalk # use these instructions to deploy. i,e ebs instructions
+  region: "ap-southeast-2"
+  app: "docker-react"
+  env: "DockerReact-env"
+  bucket_name: "elasticbeanstalk-ap-southeast-2-976196051615"
+  bucket_path: "docker-react" # this is the folder that is created in s3. All projects environment create a folder in this bucket 
+  on:
+    branch: master # only deploy when its master branch
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
